tests/negative/resource_builtin_bad_arity_move.ora
resource TokenUnit = u256;

contract ResourceBadArityMove {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(from: address, to: address) {
        @move(balances[from], balances[to]);
    }
}
